Fix: minor hero spacings/imports

--- a/components/Hero/Home/Home.module.scss
+++ b/components/Hero/Home/Home.module.scss
@@ -14,7 +14,7 @@
   min-height: var(--hero-min-height);
   max-height: var(--hero-max-height);
   padding-top: calc(var(--header-height) / 2);
-  margin-top: calc(var(--header-height) * -1);
+  // margin-top: calc(var(--header-height) * -1);
   background-color: $primary;
   color: $white;
   z-index: 1;
@@ -32,7 +32,7 @@
     width: 100%;
     max-width: 70%;
     @include breakpoint-up(md) {
-      max-width: 56%;
+      max-width: 48%;
     }
   }
 }
